--- a/src/main/resources/templates/blog-main.html
+++ b/src/main/resources/templates/blog-main.html
@@ -9,9 +9,16 @@
 
   <header th:insert="blocks/heder :: header"></header><!-- blocks/heder - откуда брать файл,  :: header - конкретное название участка -->
 
-  <div class="container mt-50">
+  <div class="container mt-5">
     <h1>Блог сайта</h1>
+    <div th:each="el : ${posts}" class="alert alert-info mt-2">
+      <h3 th:text="${el.title}"/>
+      <a th:href="'/blog/' + ${el.id}">Детальнее</a>>
+    </div>
+
   </div>
+
+
 
   <div th:insert="blocks/footer :: footer"></div>
 
